@@ -2,6 +2,7 @@ package br.com.zupacademy.henriquecesar.mercadolivre.service;
 
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 import org.springframework.web.multipart.MultipartFile;
@@ -11,7 +12,7 @@ public class FakerUploadService implements ServicoUpload {
 
     @Override
     public List<String> envia(List<MultipartFile> arquivos) {
-        return arquivos.stream().map(this::generateLink).toList();
+        return arquivos.stream().map(this::generateLink).collect(Collectors.toList());
     }
     
     private String generateLink(MultipartFile file) {
